@@ -113,12 +113,19 @@ print.flextable <- function(x, preview = "html", ...){
 #' For PowerPoint (pptx) output, if pandoc version < 2.4 is used, an error
 #' will be raised.
 #'
+#' @section HTML chunk options:
+#' Result can be aligned with chunk option \code{ft.align} that
+#' accepts values 'left', 'center' and 'right'.
+#'
 #' @section Word chunk options:
 #' Result can be aligned with chunk option \code{ft.align} that
 #' accepts values 'left', 'center' and 'right'.
 #'
 #' Word option 'Allow row to break across pages' can be
 #' activated with chunk option \code{ft.split} set to TRUE.
+#'
+#' To specify a Word style for table caption use chunk option
+#' \code{tab.cap.style}. The default value is "Table Caption".
 #'
 #' @section PowerPoint chunk options:
 #' Position should be defined with options \code{ft.left}
